[tool.poetry]
name = "csv-to-sru"
version = "0.1.0"
description = ""
authors = ["W Winfried Kretzschmar <winni@warrenwk.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
